# audit-service

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
.sonarlint/: connectedMode.json
config/: patterns.yaml  rules.yaml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/kubernetes/: deployment.yaml  service.yaml
docs/: TECHNICAL_CHANGE_LOG.md
src/: __init__.py  main.py
src/api/: __init__.py  models.py
src/api/routes/: __init__.py  audit.py  checkpoints.py  health.py
src/auditors/: __init__.py  antipattern_detector.py  base.py  citation_verifier.py  cross_reference_auditor.py  pattern_compliance.py  security_scanner.py
src/clients/: __init__.py  codebert_client.py
src/core/: __init__.py  config.py  exceptions.py
src/embedders/: __init__.py  codebert_embedder.py
src/extractors/: __init__.py  code_extractor.py
src/models/: __init__.py  requests.py  responses.py
src/rules/: __init__.py  coding_patterns_rules.py  security_rules.py  static_analysis_rules.py
src/scoring/: __init__.py  code_similarity.py
tests/: __init__.py  conftest.py
tests/fixtures/: expected_results.json  sample_code.py
tests/integration/: test_audit_api.py
tests/unit/: test_eep5_audit_endpoint.py  test_eep5_code_extraction.py  test_eep5_code_similarity.py  test_eep5_codebert_client.py  test_eep5_codebert_embeddings.py  test_eep5_cross_reference_auditor.py  test_health.py
tests/unit/test_auditors/: __init__.py
tests/unit/test_rules/: __init__.py
