[tool.poetry]
name = "audit-service"
version = "0.1.0"
description = "Code validation and audit service for AI Coding Platform (Auditor - Port 8084)"
authors = ["Kevin Toles"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "~=0.109"
uvicorn = {extras = ["standard"], version = "~=0.27"}
pydantic = "~=2.5"
pydantic-settings = "~=2.1"
httpx = "~=0.26"
pyyaml = "~=6.0"
python-dotenv = "~=1.0"
structlog = "~=24.1"
numpy = "~=1.26"
sentence-transformers = "~=2.2"

[tool.poetry.group.dev.dependencies]
pytest = "~=7.4"
pytest-asyncio = "~=0.23"
pytest-cov = "~=4.1"
httpx = "~=0.26"
black = "~=24.1"
ruff = "~=0.1"
mypy = "~=1.8"
types-pyyaml = "~=6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
